<resources>
    <string name="app_name">Groundforce</string>

    <string name="splash_1_big_text">Earn Because You Live Where You Live</string>
    <string name="splash_1_small_text">Complete simple tasks on your mobile phone and around your location.</string>
    <string name="splash_2_big_text">Don\'t Get Too Far To Get Things Done</string>
    <string name="splash_2_small_text">Distance is not a barrier. Verify addresses close to you and earn cool cash!</string>
    <string name="splash_3_big_text">Do More, Earn More With Groundforce</string>
    <string name="splash_3_small_text">More missions, more surveys, more money!</string>
    <string name="welcome_trooper">Welcome Trooper</string>
    <string name="meet_you">Nice To Meet You!</string>
    <string name="create_account">Create Account</string>
    <string name="new_here">I\'m Not New Here</string>
    <string name="sign_google">Sign Up With Google</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="will_text_you">We\'ll text you a code to verify your mobile number.</string>
    <string name="t_and_c">By clicking "Continue", you are accepting our Terms &amp; Conditions as well as our Privacy Policy</string>
    <string name="continue_text">Continue</string>
    <string name="otp_text">Please enter the 4 digit code sent to you at 0801 **** 678</string>
    <string name="resend_text">Didn\'t get the code? Resend.</string>
    <string name="confirm_text">Confirm</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="phone_activation">Phone Activation</string>
</resources>