<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.PhoneVerificationFragment">

   <TextView
       android:id="@+id/enter_phone_number"
       android:layout_width="151dp"
       android:layout_height="19dp"
       android:layout_marginTop="97.30dp"
       android:layout_marginStart="37dp"
       android:layout_marginEnd="172dp"
       android:text="@string/enter_phone_number"
       android:textSize="16dp"
       android:textColor="@color/colorTextPrimary"
       android:fontFamily="@font/roboto"
       android:textAlignment="viewStart"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/phone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="7dp"
            app:ccp_textSize="12sp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_defaultPhoneCode="234"
            android:background="@drawable/phone_number_border_line"
            app:ccp_showNameCode="false" />

        <EditText
            android:id="@+id/editText_carrierNumber"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="2"
            android:inputType="phone"
            android:maxLength="10"
            android:backgroundTint="@color/colorBorderLine"
            android:singleLine="true" />
    </LinearLayout>
    
    <TextView
        android:layout_width="278dp"
        android:layout_height="39.21dp"
        android:layout_marginStart="41.22dp"
        android:layout_marginEnd="41.22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/will_text_you"
        android:textSize="16dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextPrimary"
        android:textAlignment="center"/>
    
    <TextView
        android:id="@+id/t_and_c_tv"
        android:layout_width="286dp"
        android:layout_height="35dp"
        android:layout_marginTop="532dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:text="@string/t_and_c"
        android:textSize="12dp"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <com.google.android.material.button.MaterialButton
       android:id="@+id/continue_sign_up_btn"
        app:cornerRadius="40dp"
        android:layout_marginTop="579dp"
        android:text="@string/continue_text"
        style="@style/sign_up_button_style"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>