<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.PhoneActivationFragment">

    <LinearLayout
        android:id="@+id/activation_header_layout"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="31dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activation_img"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/activation_back_arrow"
            android:src="@drawable/ic_arrow"
            app:tint="@color/colorTextPrimary"
            style="@style/back_arrow_style" />
        <TextView
            android:id="@+id/activation_header"
            android:text="@string/phone_activation"
            style="@style/header_style" />
    </LinearLayout>

    <ImageView
        android:id="@+id/activation_img"
        android:layout_width="146dp"
        android:layout_height="156dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="103dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary" />
    
    <TextView
        android:id="@+id/otp_tv"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="50dp"
        android:text="@string/otp_text"
        android:textAlignment="center"
        android:textSize="16dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/activation_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.mukesh.OtpView
        android:id="@+id/pin_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:drawableBottom="@drawable/otpline"
        android:inputType="number"
        app:lineWidth="5dp"
        app:lineColor="@color/otpTextAndLineColor"
        android:singleLine="true"
        android:textColor="@color/otpTextAndLineColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:viewType="line" />


<!--    <com.mukesh.OtpView-->
<!--        android:id="@+id/pin_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="72dp"-->
<!--        android:clickable="false"-->
<!--        android:cursorVisible="false"-->
<!--        android:focusable="true"-->
<!--        android:inputType="number"-->
<!--        android:singleLine="false"-->
<!--        android:textColor="@color/otpTextAndLineColor"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:lineColor="@color/otpTextAndLineColor"-->
<!--        app:lineWidth="3dp"-->
<!--        app:viewType="line" />-->


    <TextView
        android:id="@+id/resend_tv"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/resend_text"
        android:textSize="16dp"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/pin_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_sign_up_btn"
        app:cornerRadius="40dp"
        android:layout_marginTop="579dp"
        android:text="@string/confirm_text"
        style="@style/sign_up_button_style"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>